# postgres_data_sync

./: Cargo.toml  README.md
src/: main.rs
